Add normalized food group and brand filters
